# StaticArrayscpp

./: CMakeLists.txt
include/staticarrays/: cholesky.hpp  linear_algebra.hpp  matrix.hpp  staticarrays.hpp  transpose.hpp  triangular.hpp  vector.hpp
test/: test_staticarrays.cpp
